2006-06-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing crash (due to terrains not being loaded) and pointer mix-up (causing
	  wrong colors in the generated minimap) in the new minimap generator.

2006-06-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug where 'stray' items on the ground would be picked up
	  by the carpet even though they shouldn't.

2006-06-14  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* intrinsics.cc: Fixed multimap issue when casting 'mark' on a virtue stone
	  when the stone is not directly on the map.
	* actors.cc, ready.h, objs/contain.cc, mapedit/shapeedit.cc and
	  mapedit/exult_studio.glade: Added an 'usecode container' item type to BG.
	  Also, in 'objs/contain.cc', changed the usecode container detection code
	  to use the item type instead of shape number.

2006-06-11 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* midi/audio_drivers/mt32emu/i386.cpp: sync with scummvm to make it
	  compile with gcc 4

2006-04-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: fix delete/delete[] mixups

2006-04-18    <jeff@mini.nerble.net>

	* pathfinder/Zombie.cc: Straight-line pathfinder now works in
	3-dimensions, and combat projectile code allows shooting things at
	any height.

2006-04-07    <jeff@mini.nerble.net>

	* combat.cc: Support 'summon' by certain monsters (mages,
	liches).  Also added teleport, summon, and can-be-invisible flag
	support to ExultStudio and to savegames.

2006-04-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated documentation and FAQ
	* docs/ReadMe.html,FAQ.html: updated documentation and FAQ
	* Readme, FAQ: updated

2006-04-05    <jeff@mini.nerble.net>

	* objs/objs.cc: Handle changes to IFIX and terrain objects
	correctly so the changes get saved by EStudio.

2006-03-19  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc: Fixed incorrect return value of data size for written strings.
