@@ -56,6 +56,7 @@ F3		map_teleport
 F4		toggle_fullscreen
 F10		show_endgame
 F11		show_si_intro
+Shift-F3	write_minimap
 Alt-F4		quit
 Alt-Enter	toggle_fullscreen
 Alt-1		sound_tester
